2003-12-19  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in, Makefile.in, 
	  foomatic-printermap-to-gimp-print-xml.in: Added script to
	  update the driver entry of GIMP-Print with the printer list
	  of the src/foomatic/foomatic-printermap file of the
	  GIMP-Print source tarball (GIMP-Print 4.2.x or later).

	* Makefile.in: Make mkinstalldirs executable (Thanks to Florian
	  Diesch <diesch@spamfence.net>).

	* Makefile.in: Removed $(DESTDIR) from "make" calls for the Perl
	  libraries (Thanks to Florian Diesch <diesch@spamfence.net>).

2003-12-17  Tim Waugh <twaugh@redhat.com>
 
	* Makefile.in: Use relative symlink, not absolute.

2003-11-22  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged all files of the repository with "foomatic-3_0-bp",
	  started stable branch "foomatic-3_0-branch".
	
2003-11-20  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Added section that CUPS raster drivers can now be used
	  with every spooler.

2003-11-20  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.1rc1. 
	  Tag name: "foomatic-db-engine-3_0_1rc1".

	* README, USAGE: Updated for version 3.0.0rc1.
	
2003-11-19  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: Do not do a test run of GhostScript in the /def/fd/3
	  check if there is no GhostScript available.

2003-10-20  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: Added /usr/local/libexec to LIBSEARCHPATH for *BSD
	  compatibilty. Thanks to Sebastian Horzela (sh at horzela dot
	  com).
	
	* configure.in: Replaced a "==" by "=" in a "test" expression (*BSD
	  compatibility).

	* configure.in, Makefile.in, README.build-foomatic-filters-ppds:
	  Fixes from Patrick Powell.

2003-09-13  Patrick Powell <papowell@lprng.com>

	* foomatic-configure:
	  set 'use strict' and perl -w options - cleaned up
	  compilation and usage errors exposed by adding these
	  options.

	  modified the LPRng setup to be consistent with the new