@@ -1,3 +1,7 @@
+2004-01-22  Tim Waugh  <twaugh@redhat.com>
+
+	* lib/Foomatic/DB.pm (perltoxml): New function.
+
 2003-12-19  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* configure.in, Makefile.in, 
